fetchPrivateDocuments to fetchPrivateDocumentIDs
